<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditOrDuplicateDocumentActivity">

    <RelativeLayout
        android:elevation="18dp"
        android:background="@color/secondary_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="goToMainActivity"
            android:layout_alignParentLeft="true"
            android:padding="16dp"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:text="@string/annuler"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/saveEditedDocument"
            android:layout_alignParentRight="true"
            android:padding="16dp"
            android:textColor="@drawable/button_state_selector"
            android:textSize="16sp"
            android:text="@string/save"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ScrollView
        android:background="@color/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/main_background"
            android:layout_marginTop="64dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingBottom="128dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/document_title_background"
                android:layout_marginTop="16dp"
                android:id="@+id/document_id_to_edit"
                android:textSize="32sp"
                android:hint="@string/title_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h1_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h2_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h3_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h4_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h5_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/time_horizont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h6_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h7_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h8_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h9_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="16dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:text="@string/h10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:text="@string/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:background="@drawable/inserted_text_background"
                android:id="@+id/h10_text_to_edit"
                android:layout_marginTop="16dp"
                android:hint="@string/insert_text_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>